--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,3 +1,39 @@
 h2 {
   color: red;
 }
+body{
+  /* background-color: #222222; */
+  background-color: black;
+  /* background-color: #0f172a; */
+  color: white!important;
+  cursor: default;
+  
+}
+.height-animation{
+  height: 150px;
+  opacity: 50%;
+  animation: height 5s infinite;
+}
+@keyframes height {
+0%{
+  height: 150px;
+}
+40%{
+  height: 300px;
+}
+60%{
+  height: 500px;
+}
+90%{
+  height: 300px;
+}
+100%{
+  height: 150px;
+}
+}
+h1,h2,h3,h4{
+  background: linear-gradient(to right, white, lightgray 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+}
