--- a/styles/components.scss
+++ b/styles/components.scss
@@ -5,7 +5,7 @@
 
 // container
 .container {
-  @apply mx-auto max-w-[1140px] px-4;
+  @apply mx-auto max-w-screen-2xl px-4;
 }
 
 // form style
@@ -109,6 +109,6 @@
 //contact
 .contact-list {
   a {
-    @apply font-semibold text-dark;
+    @apply font-semibold ;
   }
 }
