--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -8,7 +8,7 @@
 }
 
 .navbar-brand {
-  @apply text-xl font-semibold text-dark;
+  @apply text-xl font-semibold ;
 
   image {
     @apply max-h-full max-w-full;
@@ -32,7 +32,7 @@
 }
 
 .nav-link {
-  @apply py-3 px-2 font-primary text-base font-bold text-dark transition hover:text-primary md:py-4 lg:px-3;
+  @apply py-3 px-2 font-primary text-base font-bold  transition hover:text-primary md:py-4 lg:px-3;
 
   &-active {
     @apply text-primary;
